# send-sms

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api/src/: main.cpp
backend/: CMakeLists.txt
backend/src/: main.cpp
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h
